appId: org.inaturalist.iNaturalistMobile
---
- launchApp:
    appId: org.inaturalist.iNaturalistMobile
    clearState: true

- extendedWaitUntil:
    visible: "Close"
    timeout: 30000

- waitForAnimationToEnd:
    timeout: 5000

- tapOn: Close

- assertVisible: Use iNaturalist to identify any living thing
