appId: org.inaturalist.iNaturalistMobile
---
# Safari: Download sample image with exif
- launchApp:
    appId: com.apple.mobilesafari
- tapOn: Address
- inputText: "https://raw.githubusercontent.com/ianare/exif-samples/refs/heads/master/jpg/Canon_40D.jpg"
- pressKey: Enter
- tapOn: Share
- scrollUntilVisible:
    element: Save to Files
- tapOn: Save to Files
- tapOn: Save
# handle replacing duplicate files
- runFlow:
    when:
      visible: Replace Existing Items?
    commands:
      - tapOn: Replace

# Files: find image and share into iNaturalist
- launchApp:
    appId: com.apple.DocumentsApp # iOS files app
- longPressOn: Canon_40D
- tapOn: Share
- tapOn: iNaturalist

# iNaturalist custom Share Extension
- tapOn: "Yes" # <- quotes are necessary to distinguish `"Yes"` string from `Yes` which Maestro treats as a bool

# iNaturalist app
- scrollUntilVisible: # For clarify, center the "OBSERVED AT" header which should have the time right after
    centerElement: true
    element: OBSERVED AT
